fix: 대여 수령시 예약 상태와 대여 상태인 대여 상세를 조회